<resources>
    <string name="app_name">画架</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--splash activity-->
    <string name="splash_teach">开机引导</string>
    <string name="waiting">请稍后...</string>
    <string name="downloading">正在下载...</string>
    <string name="auto_shut">定时关机</string>
    <string name="wifi_des">扫描App—WiFi配置中的二维码连接WiFi</string>
    <string name="wifi_connecting">正在连接WiFi请稍后</string>
    <string name="default_paint">默认画单</string>
    <string name="news_paint">最新资讯</string>
    <string name="reset_app">恢复出厂设置</string>
    <string name="sys_resume">系统回复中</string>
    <string name="swipe_left">向左扫动\n显示上一张</string>
    <string name="swipe_right">向右扫动\n显示下一张</string>
    <string name="swipe_up">向上扫动\n查看画作信息</string>
    <string name="swipe_down">向下扫动\n画作信息隐藏</string>
    <string name="any_key">点击遥控器任意键跳过开机引导</string>
    <string name="touch_area">手势操作感应区域</string>
    <string name="band_mine1">请使用App中{我的}功能添加设备</string>
    <string name="band_mine2">扫描二维码绑定画框</string>
    <string name="light_choose">亮度选择</string>
    <string name="light_normal">正常模式</string>
    <string name="light_sleep">睡眠模式</string>
    <string name="light_night">夜间模式</string>
    <string name="light_sensor">传感器灵敏度选择</string>
    <string name="light_turn">关灯息屏</string>
    <string name="delete_paint">是否删除该画单</string>
    <string name="delete_picture">是否删除该画作</string>
    <string name="sys_preference">系统设置</string>
    <string name="rotation_screen">横竖屏切换</string>
    <string name="entrance_ar">AR入口</string>
    <string name="light_setting">亮度设置</string>
    <string name="light_mode">模式选择</string>
    <string name="play_time">轮播时间设置 </string>
    <string name="play_time_set">轮播时间设置为 </string>
    <string name="band_device">设备绑定</string>
    <string name="download">下载APP</string>
    <string name="wifi_conn">WiFi连接</string>
    <string name="language">语言选择</string>
    <string name="auto_shutdown">定时关机</string>
    <string name="current_version">当前系统版本:</string>
    <string name="detect_new_version">检测到新版本</string>
    <string name="collected">收藏成功</string>
    <string name="collect">取消收藏</string>
    <string name="about_device">关于本机</string>
    <string name="sys_update">系统更新</string>
    <string name="reset_sys">系统重置</string>
    <string name="download_qr_code">扫描二维码  前往App Strore 下载</string>
    <string name="cur_version_des">当前已是最新版本</string>
    <string name="cur_version_title">当年系统版本</string>
    <string name="shutdown_time_num_des">系统将于 </string>
    <string name="device_name">设备名称：</string>
    <string name="total_storage">总容量:</string>
    <string name="storage_available">可用容量：</string>
    <string name="version_code">版本:</string>
    <string name="mode_code">型号:</string>
    <string name="serial_code">序列号:</string>
    <string name="wifi_address">WiFi 地址:</string>
    <string name="bluetooth_address">蓝牙地址:</string>
    <string name="band_success">绑定成功!</string>
    <string name="band_failed">绑定失败!</string>
    <string name="back">返回</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="user_wrong">用户名或密码错误</string>
    <string name="seconds">秒</string>
    <string name="a_seconds">15秒</string>
    <string name="b_seconds">30秒</string>
    <string name="minutes">分钟</string>
    <string name="a_minutes">2分钟</string>
    <string name="b_minutes">10分钟</string>
    <string name="c_minutes">30分钟</string>
    <string name="d_minutes">15分钟</string>
    <string name="e_minutes">60分钟</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="cancel">取消关机</string>




    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_act_detail">ActDetailActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="net_dissconncted">网络不可用请检查网络设置</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="title_activity_pk_all">PkAllActivity</string>
    <string name="add_tag">Add Tag</string>
    <string name="title_activity_no_login">NoLoginActivity</string>
    <string name="title_activity_will_login">WillLoginActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_next">RegisterNextActivity</string>
    <string name="title_activity_getback">GetBackActivity</string>
    <string name="title_activity_getback_next">GetBackNextActivity</string>
    <string name="action_undo">UNDO</string>
    <string name="action_delete">DELETE</string>
    <string name="title_activity_blank_fragment">BlankFragmentActivity</string>
    <string name="title_activity_my_feng_coin">MyFengCoinActivity</string>
    <string name="title_activity_other_detail">OtherDetail</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="title_activity_upload_pic2_album">UploadPic2Album</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_comment">CommentActivity</string>

    <string name="comment_def_hint">说两句吧：</string>
    <string name="title_activity_edit_album">EditAlbumActivity</string>
    <string name="title_activity_category_edit">CategoryEditActivity</string>
    <string name="title_activity_act_record">ActRecordActivity</string>
    <string name="title_activity_pk_title">PkTitleActivity</string>

    <string name="exit_fenghuo">再按一次，退出</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">录音异常</string>

    <string name="button_pushtotalk">按住说话</string>
    <string name="no_login">您未登陆</string>
    <string name="title_activity_receive_score">ReceiveScoreActivity</string>
    <string name="title_activity_join_list">JoinListActivity</string>
    <string name="title_activity_tips_step">TipsStepActivity</string>
    <!--<string name="activityrecord">ActivityRecordListActivity</string>-->


</resources>
